Fix Styling (fix): some issues cropped up with the slider

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -78,8 +78,6 @@ body {
   padding: 0;
   font-size: 16px;
   color: #FFF;
-  overflow-x: hidden;
-  position: relative;
 }
 
 #canvas {
@@ -103,7 +101,6 @@ body {
 // To override the grid-x flex-flow
 .body.grid-x.column {
   flex-direction: column;
-  margin-top: 10vh;
   height: 90vh;
 
   .center {
