--- a/resources/assets/sass/components/navigation.scss
+++ b/resources/assets/sass/components/navigation.scss
@@ -11,16 +11,15 @@
 }
 
 .title-bar {
-    max-height: 5vh;
+    max-height: 10vh;
     display: flex;
     width: 100%;
-    position: fixed;
+    position: relative;
     flex-direction: row;
     justify-content: space-between;
     padding: 0;
     z-index: 1002;
     transition: all 250ms ease-in-out;
-    @include grad-main;
 
     &.scrolled {
         min-height: 5vh;
@@ -33,7 +32,7 @@
 
     button.menu {
         background: transparent;
-        height: 50%;
+        height: 100%;
         padding: $global-padding;
         margin: 0;
         width: 105px;
